# HomeAssistant_EmmetiMirai

./: .gitignore  BUGFIX_ISSUE_TEMPLATE.md  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  README_DEVELOPMENT.md  SETUP_REPORT.md  TEMPLATE_SETUP_GUIDE.md  const.py  hacs.json  pyproject.toml  setup.py  template_manager.py  test_integration.py  time.py
.github/workflows/: python-lint.yml
emmeti_mirai/: README.md  manifest.json
wiki/: Configuration.md  Development.md  Entities.md  Home.md  Installation.md  README.md  Troubleshooting.md
